# frappe-task

./: README.md  package.json  pyproject.toml
dashboard/: package-lock.json  package.json  proxyOptions.js  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/components/: Button.tsx  Card.tsx  Input.tsx  Popup.tsx  index.tsx
dashboard/src/containers/: index.tsx
dashboard/src/containers/Form/: CreateLoanForm.tsx  CreatePledgeForm.tsx  index.tsx
dashboard/src/containers/Popup/: DeletePop.tsx  DetailsPop.tsx  NewLoanPop.tsx  NewPledgePop.tsx  index.tsx
dashboard/src/containers/Table/: Table.tsx  index.tsx
dashboard/src/hooks/usePopUp/: usePopUp.tsx
dashboard/src/pages/: index.tsx
dashboard/src/pages/Auth/: Auth.tsx  index.tsx
dashboard/src/pages/Dashboard/: Dashboard.tsx
dashboard/src/pages/Loan/: Loan.tsx  index.tsx
loan_management/: hooks.py
loan_management/loan_management/doctype/customer/: customer.json  customer.py
loan_management/loan_management/doctype/loan/: loan.js  loan.json  loan.py  test_loan.py
loan_management/loan_management/doctype/pledges/: pledges.js  pledges.json  pledges.py  test_pledges.py
loan_management/loan_management/doctype/stock/: stock.json  stock.py
loan_management/loan_management/doctype/userstock/: userstock.json  userstock.py
